#942 | Handle double quoted concepts during csv upload