@@ -21,6 +21,7 @@ import org.springframework.test.context.jdbc.Sql;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -112,7 +113,7 @@ public class EncounterHeadersCreatorIntegrationTest extends AbstractControllerIn
                 EncounterHeadersCreator.VISIT_DATE,
                 EncounterHeadersCreator.SUBJECT_ID,
                 EncounterHeadersCreator.ENCOUNTER_TYPE,
-                "\"Multi Select Coded\""
+                "Multi Select Coded"
         };
         assertDoesNotThrow(() -> {
             TxnDataHeaderValidator.validateHeaders(headers, formMapping, encounterHeadersCreator, EncounterUploadMode.UPLOAD_VISIT_DETAILS, new ArrayList<>());
@@ -121,21 +122,23 @@ public class EncounterHeadersCreatorIntegrationTest extends AbstractControllerIn
 
     @Test
     public void testAllowsHeadersWithQuotesInBetween() {
-        Concept codedConcept = testConceptService.createCodedConcept("Multi \"Select\" Coded", "SSC Answer 1", "SSC Answer 2");
-        java.util.List<String> multiSelectConcept = java.util.Collections.singletonList(codedConcept.getName());
+        Concept codedConcept = testConceptService.createCodedConcept("\"Multi \"Select\" Coded\"", "SSC Answer 1", "SSC Answer 2");
+        Concept codedConcept2 = testConceptService.createCodedConcept("\"test\"", "test Answer 1", "test Answer 2");
+        java.util.List<String> multiSelectConcepts = List.of(codedConcept.getName(), codedConcept2.getName());
         encounterType = new EncounterTypeBuilder()
                 .withName("Encounter Type")
                 .withUuid(java.util.UUID.randomUUID().toString())
                 .build();
         String formName = "Test Encounter Form " + java.util.UUID.randomUUID();
-        formMapping = testFormService.createEncounterForm(subjectType, encounterType, formName, Collections.emptyList(), multiSelectConcept);
+        formMapping = testFormService.createEncounterForm(subjectType, encounterType, formName, Collections.emptyList(), multiSelectConcepts);
 
         String[] headers = {
                 EncounterHeadersCreator.ID,
                 EncounterHeadersCreator.VISIT_DATE,
                 EncounterHeadersCreator.SUBJECT_ID,
                 EncounterHeadersCreator.ENCOUNTER_TYPE,
-                "\"Multi \"Select\" Coded\""
+                "\"Multi \"Select\" Coded\"",
+                "\"test\""
         };
         assertDoesNotThrow(() -> {
             TxnDataHeaderValidator.validateHeaders(headers, formMapping, encounterHeadersCreator, EncounterUploadMode.UPLOAD_VISIT_DETAILS, new ArrayList<>());
